syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/PlatosCodes/desserted/backend/pb";

message GameInvitation {
    int64 game_invitation_id = 1;
    int64 inviter_player_id = 2;
    int64 invitee_player_id = 3;
    int64 game_id = 4;
    string invitation_status = 5;
    google.protobuf.Timestamp timestamp = 6;
}